--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -17,6 +20,9 @@
     "tailwind-merge": "^1.8.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/js-cookie": "^3.0.2",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
