--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^1.2.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.4",
     "next": "13.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
