--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_KEY=F4M1LYTR3353CR3T
-MONGODB_URI=mongodb+srv://faderik:oA2gBABTda8hHIXS@cluster0.crkuyqg.mongodb.net/familytree?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://faderik:oA2gBABTda8hHIXS@cluster0.crkuyqg.mongodb.net/familytree?retryWrites=true&w=majority&ssl=true
